fix index navigation alignmant

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -175,6 +175,9 @@ canvas
   gap: 2rem
   display: flex
   height: 45rem
+  position: absolute
+  left: 50%
+  transform: translateX(-50%)
 
 .icon
   position: relative
@@ -243,6 +246,9 @@ canvas
   position: absolute
   top: 20%
   color: #fff
+
+  &:hover
+        text-decoration: underline
 
 .category
   animation-delay: 1s
